updated anchor tag so that link opens in a new page on browser

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Night King</h1>
     <img src="https://cdn.vox-cdn.com/thumbor/gm4o5aqfVGJ11jM6JRugpXfOFgE=/0x0:3733x2100/1200x800/filters:focal(1042x347:1638x943)/cdn.vox-cdn.com/uploads/chorus_image/image/56282285/1508_promo_stills_12001692731.0.jpg" alt="Night King Image">
     <br />
-    <a href="https://www.hbo.com/game-of-thrones">Click here to read more about Game of Thrones</a>
+    <a href="https://www.hbo.com/game-of-thrones" target="_blank">Click here to read more about Game of Thrones</a>
 </body>
 </html>
